--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <h2>- recipe service -</h2>
+    <h2>-- recipe service --</h2>
   </body>
 </html>
